style.css
* {
    padding: 0;
    margin: 0;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    /* border: 1px solid red; */

}

body {
    /* background-color: lightgray; */
}



.main-heading {
    text-align: center;
    margin: 30px 0;
    font-size: 40px;
}

.add-tasks-container,
.tasks-container {
    width: 800px;
    margin: 0 auto;
    margin-bottom: 30px;
}

.task-heading, 
.my-tasks {
    color: blueviolet;
    font-size: 30px;
}

.user-input {
    background-color: white;
    width: 100%;
    border-style: solid;
    border-width: 1px;
    border-color: #e4e7eb;
    border-radius: 10px;
    margin-top: 10px;
    padding: 15px;
}

.add-btn {
    width: 80px;
    height: 40px;
    border-radius: 5px;
    border: none;
    background-color: #4c63b6;
    color: aliceblue;
    font-size: 20px;
    margin: 20px 0;
}

.tasks {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.label-container {
    
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin-left: 20px;
    height: 50px;
    width: 100%;
    background-color: #e6f6ff;
    padding: 0 20px ;
    margin-top: 10px;
    border-radius: 4px;
    border-left: 5px solid #096f92;
}

.delete-icon {
    padding: 5px;
}

